updated full project